--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -1,3 +1,12 @@
-div Pug cools
-
-include includes/addme.pug
+doctype html
+html
+    head
+        title Заголовок здесь
+        meta(charset="utf-8")
+    body
+        img
+        ul
+            li: a(href="#") Link
+            li: a(href="#") Link
+            li: a(href="#") Link
+        p Привет, <b>мир</b>!
