--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -9,4 +9,10 @@ html
             li: a(href="#") Link
             li: a(href="#") Link
             li: a(href="#") Link
-        p Привет, <b>мир</b>!
+        p.
+            Привет, #[b Мир]!
+            #[br]
+            Я здесь на долго.
+            
+            #[br]
+            #[a(href="#") Я ссылка].
