--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -3,7 +3,7 @@ html
     head
         title Заголовок здесь
         meta(charset="utf-8")
-    body
+    body#id.class1.class2
         img
         ul
             li: a(href="#") Link
@@ -16,3 +16,4 @@ html
             
             #[br]
             #[a(href="#") Я ссылка].
+        .class3
