--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -15,5 +15,5 @@ html
             Я здесь на долго.
             
             #[br]
-            #[a(href="#") Я ссылка].
+            #[a(href="#" target="_blank" rel="nofollow") Я ссылка].
         .class3
