--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -1,19 +1,14 @@
 doctype html
 html
     head
-        title Заголовок здесь
         meta(charset="utf-8")
-    body#id.class1.class2
-        img
-        ul
-            li: a(href="#") Link
-            li: a(href="#") Link
-            li: a(href="#") Link
-        p.
-            Привет, #[b Мир]!
-            #[br]
-            Я здесь на долго.
-            
-            #[br]
-            #[a(href="#" target="_blank" rel="nofollow") Я ссылка].
-        .class3
+        title title here
+        meta(name="description" content="Описание страницы")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible" content="IE=Edge")
+        link(href="css/style.scc" rel="stylesheet")
+    body
+        //- content here
+
+
+        script(src="js/my.js")
