--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -2,13 +2,16 @@ doctype html
 html
     head
         meta(charset="utf-8")
-        title title here
+        title 
+            block title
         meta(name="description" content="Описание страницы")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="IE=Edge")
         link(href="css/style.scc" rel="stylesheet")
     body
+        include includes/_header.pug
         //- content here
-
+        block content
 
         script(src="js/my.js")
+        block addscript
