--- a/app/pug/demo.pug
+++ b/app/pug/demo.pug
@@ -1,18 +1,28 @@
+include includes/config.pug
+
 doctype html
 html
-    head
+    head(lang=lang)
         meta(charset="utf-8")
-        title 
-            block title
+        title #{myTitle}
         block metatags
             meta(name="description" content="Описание страницы")
             meta(name="viewport" content="width=device-width, initial-scale=1.0")
             meta(http-equiv="X-UA-Compatible" content="IE=Edge")
         block links
-            link(href="css/style.scc" rel="stylesheet")
+            if Bootstrap4
+                link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+            link(href=csspath+"/style.scc" rel="stylesheet")
+            if GoogleFonts
+                link(href="https://fonts.googleapis.com/css?family="+GoogleFonts+"&display=swap" rel="stylesheet")
     body
         include includes/_header.pug
         //- content here
         block content
         block scripts
+            if jQuery3
+                script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
+            if Bootstrap4
+                script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
+                script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
             script(src="js/my.js")
