--- a/app/pug/includes/config.pug
+++ b/app/pug/includes/config.pug
@@ -1,6 +1,7 @@
 - var lang = "en"
 - var myTitle = "Заголовок страницы"
-- var csspath = "css"
+- var myDesc =""
+- var csspath = "../css"
 - var Bootstrap4 = true
-- var jQuery3 = false
+- var jQuery3 = true
 - var GoogleFonts = "Open+Sans|Roboto"
