--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -21,7 +21,7 @@ append links
 append content
     p.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!
-
+    include includes/slider.html
 append scripts
     script.
         let btn = document.getElementsByClassName ("btn-primary")[0];
