--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,9 +1,9 @@
 extends includes/template.pug
 
 append config
-    - var myTitle = "Блог о Pug шаблонизаторе"
-    - var myDesc = "Учимся создавать страницы и шаблоны на базе шаблонизатора Pug"
-
+    - myTitle = "Блог о Pug шаблонизаторе"
+    - myDesc = "Учимся создавать страницы и шаблоны на базе шаблонизатора Pug"
+    - GoogleFonts += "|PT+Sans"
 append links
     style
         :scss
