--- a/app/pug/includes/template.pug
+++ b/app/pug/includes/template.pug
@@ -1,6 +1,10 @@
 block config
     include config.pug
 
+mixin slide(src, active)
+    .carousel-item(class=active)
+        img(src=src class="d-block w-100" alt="...")
+
 doctype html
 html
     head(lang=lang)
