--- a/app/pug/contact.pug
+++ b/app/pug/contact.pug
@@ -8,5 +8,5 @@ append content
     div#carouselExampleSlidesOnly.carousel.slide(data-ride="carousel")
         .carousel-inner
             +slide('https://sun9-21.userapi.com/5wr4bKbC2mklr3nzK8wxx8V2g6mMOSrSpaYCfA/6n2sY2TTvNQ.jpg', 'active')
-            +slide('https://sun9-10.userapi.com/8ohF5av-r0aXPaCfNogbRvbvJZROrs0e4GCRZg/45xmzA2lBlU.jpg', '')            +
-            +slide('https://sun9-16.userapi.com/ZUS6b6WqmWfsgzXA0FH3jYqK6oSKbvlb49RZUQ/Px8ZCHOcd6U.jpg', '')
+            +slide('https://sun9-10.userapi.com/8ohF5av-r0aXPaCfNogbRvbvJZROrs0e4GCRZg/45xmzA2lBlU.jpg')            +
+            +slide('https://sun9-16.userapi.com/ZUS6b6WqmWfsgzXA0FH3jYqK6oSKbvlb49RZUQ/Px8ZCHOcd6U.jpg')
